--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -102,7 +102,7 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="../register.html">
+                            <a class="dropdown-item d-flex align-items-center" href="../index.html">
                                 <i class="bi bi-box-arrow-right"></i>
                                 <span>Sign Out</span>
                             </a>
