change access link

--- a/register.html
+++ b/register.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="checkbox-circle mt-24">
                             <label>
-									<input type="checkbox" >  Please accept <a href="generalDashboard/dashboard.html">terms and conditions ?</a>
+									<input type="checkbox" >  Please accept <a href="userDashboard.html">terms and conditions ?</a>
 									<span class="checkmark"></span>
 								</label>
                         </div>
