--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -47,7 +47,7 @@
 
         <div class="search-bar">
             <form class="search-form d-flex align-items-center" method="POST" action="#">
-                <input type="text" name="query" placeholder="Find People" title="Enter search keyword">
+                <input style="background-color: rgba(38, 38, 38, 0.837);" type="text" name="query" placeholder="Find People" title="Enter search keyword">
                 <button type="submit" title="Search"><i class="bi bi-search"></i></button>
             </form>
         </div>
@@ -68,7 +68,7 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <img src="../landingPageAssets/img/drako.jpeg" alt="Profile" class="rounded-circle">
                         <span class="d-none d-md-block dropdown-toggle ps-2">A. Drako</span>
                     </a>
                     <!-- End Profile Iamge Icon -->
@@ -76,18 +76,13 @@
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
                             <h6>Adebayo Drako</h6>
-                            <span>Cloud Engineer</span>
+                            <span>Product Manager</span>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
 
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="../userDashboard.html">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
+
                         <li>
                             <hr class="dropdown-divider">
                         </li>
