--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -46,7 +46,7 @@
 
         <div class="search-bar">
             <form class="search-form d-flex align-items-center" method="POST" action="#">
-                <input type="text" name="query" placeholder="Find People" title="Enter search keyword">
+                <input style="background-color: rgba(38, 38, 38, 0.837);" type="text" name="query" placeholder="Find People" title="Enter search keyword">
                 <button type="submit" title="Search"><i class="bi bi-search"></i></button>
             </form>
         </div>
@@ -163,16 +163,16 @@
                 <div class="col-lg-12">
 
                     <div class="card basic">
-                        <div class="card-body">
+                        <div style="height: 75vh; overflow-y: scroll;" class="card-body">
 
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
@@ -183,11 +183,11 @@
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 3.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
@@ -198,11 +198,11 @@
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
@@ -213,11 +213,11 @@
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
@@ -228,11 +228,11 @@
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 3.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
@@ -243,11 +243,11 @@
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
                                     <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i>Cloud Engineer</i></p>
+                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #0a577b; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
