--- a/generalDashboard/faq.html
+++ b/generalDashboard/faq.html
@@ -46,7 +46,7 @@
 
         <div class="search-bar">
             <form class="search-form d-flex align-items-center" method="POST" action="#">
-                <input type="text" name="query" placeholder="Find People" title="Enter search keyword">
+                <input style="background-color: rgba(38, 38, 38, 0.837);" type="text" name="query" placeholder="Find People" title="Enter search keyword">
                 <button type="submit" title="Search"><i class="bi bi-search"></i></button>
             </form>
         </div>
