Feat: select profile pic from device

--- a/register.html
+++ b/register.html
@@ -25,6 +25,7 @@
                 <div class="inner">
                     <div class="image-holder">
                         <img src="images/Rectangle 2.png" alt="">
+
                     </div>
                     <div class="form-content">
                         <div class="form-header">
@@ -62,6 +63,15 @@
 										</label>
                                 </div>
                             </div>
+                        </div>
+
+
+                        <div class="avartar-picker">
+                            <input type="file" name="file-1[]" id="file-1" class="inputfile" data-multiple-caption="{count} files selected" multiple />
+                            <label for="file-1">
+                                <i style="font-size: 20px;" class="zmdi zmdi-camera"></i>
+                                <span>Choose a profile picture</span>
+                            </label>
                         </div>
 
                     </div>
