Feat: step-by-step illustration

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
+                    <li><a class="nav-link scrollto" href="#about">Mission</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -66,7 +66,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
-            <h1>Welcome to <span>Gamma Prime</span></h1>
+            <h1><span>Gamma Prime</span></h1>
             <h2>Democratising Access to AI</h2>
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -85,35 +85,33 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4 class="title">Key Feature One</h4>
-                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <h4 style="margin-bottom: 2rem;" class="title text-center">Register</h4>
+                            <img src="landingPageAssets/img/illustration1.svg" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                            <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4 class="title">Key Feature Two</h4>
-                            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            <h4 style="margin-bottom: 2rem;" class="title text-center">Choose a track</h4>
+                            <img src="landingPageAssets/img/illus8.svg" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                            <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4 class="title">Key Feature Three</h4>
-                            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                            <h4 style="margin-bottom: 2rem;" class="title text-center">Skill up</h4>
+                            <img src="landingPageAssets/img/illus6.svg" class="img-fluid description" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                            <div class="icon"><i class="bx bx-world"></i></div>
-                            <h4 class="title">Key Feature Four</h4>
-                            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                            <h4 style="margin-bottom: 2rem;" class="title text-center">Deploy</h4>
+                            <img src="landingPageAssets/img/illus5.svg" class="img-fluid description" alt="">
                         </div>
                     </div>
+
+
 
                 </div>
 
@@ -126,8 +124,8 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>About</h2>
-                    <h3>Find Out More <span>About Us</span></h3>
+                    <h2>Mission</h2>
+                    <h3><span>Our Mission</span></h3>
                 </div>
 
                 <div class="row">
@@ -205,7 +203,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h3>Check our <span>Services</span></h3>
+                    <h3><span>Services</span></h3>
                     <p style="color: #bfbfbf;">A Multi-Pronged Approach to AI Democratisation</p>
                 </div>
 
@@ -332,8 +330,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Products</h2>
-                    <h3>Check our <span>Products</span></h3>
+                    <h3><span>Products</span></h3>
                 </div>
 
 
