Fix: top people text appearance

--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -318,7 +318,7 @@
                                     <div class="activite-label">2 yrs</div>
                                     <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                                     <div class="activity-content">
-                                        <a href="../userDashboard.html" class="fw-bold text-dark">Adebayou Drako</a>
+                                        <a href="../userDashboard.html" class="fw-bold text-light">Adebayou Drako</a>
                                     </div>
                                 </div>
 
@@ -326,7 +326,7 @@
                                     <div class="activite-label">5 mts</div>
                                     <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
                                     <div class="activity-content">
-                                        <a href="../userDashboard.html" class="fw-bold text-dark">Ibrahim Ismail</a>
+                                        <a href="../userDashboard.html" class="fw-bold text-light">Ibrahim Ismail</a>
                                     </div>
                                 </div>
 
@@ -334,7 +334,7 @@
                                     <div class="activite-label">5 yrs</div>
                                     <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                                     <div class="activity-content">
-                                        <a href="../userDashboard.html" class="fw-bold text-dark">Abubakar Bello</a>
+                                        <a href="../userDashboard.html" class="fw-bold text-light">Abubakar Bello</a>
                                     </div>
                                 </div>
 
@@ -342,7 +342,7 @@
                                     <div class="activite-label">3 yrs</div>
                                     <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                                     <div class="activity-content">
-                                        <a href="../userDashboard.html" class="fw-bold text-dark">Micheal Oyin</a>
+                                        <a href="../userDashboard.html" class="fw-bold text-light">Micheal Oyin</a>
                                     </div>
                                 </div>
 
@@ -350,7 +350,7 @@
                                     <div class="activite-label">2 mts</div>
                                     <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                                     <div class="activity-content">
-                                        <a href="../userDashboard.html" class="fw-bold text-dark">Patricia Drako</a>
+                                        <a href="../userDashboard.html" class="fw-bold text-light">Patricia Drako</a>
                                     </div>
                                 </div>
 
