Fix: change register to join

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </nav>
 
             <a href="register.html">
-                <button class="btn btn-primary">Register</button>
+                <button class="btn btn-primary">Join</button>
             </a>
             <!-- .navbar -->
 
