Feat: crate forgot password interface

--- a/adminLogin/adminForgetPassword.html
+++ b/adminLogin/adminForgetPassword.html
@@ -34,29 +34,21 @@
                     <div class="col-md-12">
                         <div class="form-block mx-auto">
                             <div class="text-center mb-5">
-                                <h3 style="color: rgb(197, 197, 197);">Login to <strong style="color: #149DDD;">Gamma Prime</strong></h3>
+                                <div style="display: flex; justify-content: center;">
+                                    <img width="30rem" height="30rem" src="../logo1.png" alt="" srcset="">
+                                    <p style="margin: .2rem .5rem;">Gamma Prime</p>
+                                </div>
                                 <!-- <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p> -->
                             </div>
                             <form action="#" method="post">
                                 <div class="form-group first">
-                                    <label for="username">Username</label>
+                                    <label for="username">Email</label>
                                     <input type="text" class="form-control" placeholder="your-email@gmail.com" id="username">
                                 </div>
-                                <div class="form-group last mb-3">
-                                    <label for="password">Password</label>
-                                    <input type="password" class="form-control" placeholder="Your Password" id="password">
-                                </div>
 
-                                <div class="d-sm-flex mb-5 align-items-center">
-                                    <label class="control control--checkbox mb-3 mb-sm-0"><span class="caption">Remember me</span>
-                    <input type="checkbox" checked="checked"/>
-                    <div class="control__indicator"></div>
-                  </label>
-                                    <span class="ml-auto"><a href="adminForgetPassword.html" class="forgot-pass">Forgot Password?</a></span>
-                                </div>
 
                                 <a style="text-decoration: none; color: white; padding-top: 1rem;" class="btn btn-block btn-primary" href="../generalDashboard/dashboard.html">
-                                  Log In
+                                  Send
                                 </a>
 
                             </form>
