--- a/index.html
+++ b/index.html
@@ -423,14 +423,12 @@
                                 <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Coming soon...</h4>
-                                <span>Coming soon...</span>
+                                <h4>Name</h4>
+                                <span>Title...</span>
                             </div>
                         </div>
                     </div>
@@ -441,14 +439,12 @@
                                 <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Coming soon...</h4>
-                                <span>Coming soon...</span>
+                                <h4>Name</h4>
+                                <span>Title...</span>
                             </div>
                         </div>
                     </div>
@@ -459,14 +455,12 @@
                                 <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Coming soon...</h4>
-                                <span>Coming soon...</span>
+                                <h4>Name</h4>
+                                <span>Title...</span>
                             </div>
                         </div>
                     </div>
@@ -477,14 +471,12 @@
                                 <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Coming soon...</h4>
-                                <span>Coming soon...</span>
+                                <h4>Name</h4>
+                                <span>Title...</span>
                             </div>
                         </div>
                     </div>
