Feat: redirect user back to login page after forgeting password

--- a/adminLogin/adminForgetPassword.html
+++ b/adminLogin/adminForgetPassword.html
@@ -47,7 +47,7 @@
                                 </div>
 
 
-                                <a style="text-decoration: none; color: white; padding-top: 1rem;" class="btn btn-block btn-primary" href="../generalDashboard/dashboard.html">
+                                <a style="text-decoration: none; color: white; padding-top: 1rem;" class="btn btn-block btn-primary" href="adminLogin.html">
                                   Send
                                 </a>
 
