--- a/adminLogin/adminLogin.html
+++ b/adminLogin/adminLogin.html
@@ -34,7 +34,10 @@
                     <div class="col-md-12">
                         <div class="form-block mx-auto">
                             <div class="text-center mb-5">
-                                <h3 style="color: rgb(197, 197, 197);">Login to <strong style="color: #149DDD;">Gamma Prime</strong></h3>
+                                <div style="display: flex; justify-content: center;">
+                                    <img width="30rem" height="30rem" src="../logo1.png" alt="" srcset="">
+                                    <p style="margin: .2rem .5rem;">Gamma Prime</p>
+                                </div>
                                 <!-- <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p> -->
                             </div>
                             <form action="#" method="post">
