Feat: UI update

--- a/register.html
+++ b/register.html
@@ -29,9 +29,13 @@
                     </div>
                     <div class="form-content">
                         <div class="form-header">
-                            <h3>Register</h3>
+                            <div style="display: flex; justify-content: center;">
+                                <img width="30rem" height="30rem" src="logo1.png" alt="" srcset="">
+                                <p style="margin: .2rem .5rem;">Gamma Prime</p>
+                            </div>
+                            <!-- <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p> -->
                         </div>
-                        <div class="form-row">
+                        <div style="margin-top: 6rem;" class="form-row">
                             <div class="form-holder">
                                 <input type="text" placeholder="First Name" class="form-control">
                             </div>
@@ -87,9 +91,12 @@
                     </div>
                     <div class="form-content">
                         <div class="form-header">
-                            <h3>Register</h3>
+                            <div style="display: flex; justify-content: center;">
+                                <img width="30rem" height="30rem" src="logo1.png" alt="" srcset="">
+                                <p style="margin: .2rem .5rem;">Gamma Prime</p>
+                            </div>
                         </div>
-                        <div class="form-row">
+                        <div style="margin-top: 6rem;" class="form-row">
                             <div class="form-holder w-100">
                                 <input type="text" placeholder="Country" class="form-control">
                             </div>
@@ -139,9 +146,12 @@
                     </div>
                     <div class="form-content">
                         <div class="form-header">
-                            <h3>Register</h3>
+                            <div style="display: flex; justify-content: center;">
+                                <img width="30rem" height="30rem" src="logo1.png" alt="" srcset="">
+                                <p style="margin: .2rem .5rem;">Gamma Prime</p>
+                            </div>
                         </div>
-                        <div class="form-row">
+                        <div style="margin-top: 6rem;" class="form-row">
                             <div class="form-holder w-100">
                                 <textarea name="" id="" placeholder="Professional Summary" class="form-control" style="height: 99px;"></textarea>
                             </div>
